
// Code generated - DO NOT EDIT.
// This file is a generated protocol buffer definition and any manual changes will be lost.
syntax = "proto3";
package InsuranceFund;

import "google/protobuf/timestamp.proto";
option go_package = "blep.ai/data/connectors/perpetual/smart-contracts/L2/InsuranceFund";

message OwnershipTransferred {
	google.protobuf.Timestamp ts = 1;
	bytes PreviousOwner = 2;		//	address
	bytes NewOwner = 3;		//	address
}

message ShutdownAllAmms {
	google.protobuf.Timestamp ts = 1;
	bytes BlockNumber = 2;		//	uint256
}

message TokenAdded {
	google.protobuf.Timestamp ts = 1;
	bytes TokenAddress = 2;		//	address
}

message TokenRemoved {
	google.protobuf.Timestamp ts = 1;
	bytes TokenAddress = 2;		//	address
}

message Withdrawn {
	google.protobuf.Timestamp ts = 1;
	bytes Withdrawer = 2;		//	address
	bytes Amount = 3;		//	uint256
}
